# PDLS_EXT3_Python_Touch

./: LICENCE.md  README.md
Pico/: PDLS_EXT3_Python_Touch.py  README.md  ReadMe.md  hV_Fonts.py  hV_GUI.py  hV_Screen.py
Pico/examples/: Basic_Touch_Draw.py  Basic_Touch_GUI.py  Basic_Touch_TicTacToe.py  Common_Colours.py  Common_Fonts.py  Common_Forms.py  Common_Orientation.py  Common_Text.py  Common_WhoAmI.py  Example_Fast_Line.py  ReadMe.md
Zero2W_4B/: Notebook - First Example.ipynb  Notebook - Inside the library.ipynb  Notebook - Installation.ipynb  README.md  ReadMe.md  pyproject.toml  requirements.txt
Zero2W_4B/examples/: Basic_Touch_Draw.py  Basic_Touch_GUI.py  Basic_Touch_TicTacToe.py  Common_Colours.py  Common_Fonts.py  Common_Forms.py  Common_Orientation.py  Common_Text.py  Common_WhoAmI.py  Example_Fast_Line.py  Notebook - Other Examples.ipynb  Template.py
Zero2W_4B/src/: PDLS_EXT3_Python_Touch.py  __version__.py  hV_Fonts.py  hV_GUI.py  hV_Screen.py
