[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PDLS_EXT3_Python_Touch"
version = "6.0.7"
authors = [
  { name="Rei Vilo" },
]
description = "Python library for Pervasive Displays EPDK-271-Touch"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC BY-NC-SA 4.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rei-vilo/PDLS_EXT3_Python_Touch"
"Bug Tracker" = "https://github.com/rei-vilo/PDLS_EXT3_Python_Touch/issues"
